[UPDATE] Made a separate file to test the api with a poetry script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "cartopy (>=0.24.1,<0.25.0)"
 ]
 
+[project.scripts]
+test-tle = "inorbit.test_tle:main"
+
 [tool.poetry]
 packages = [{include = "inorbit", from = "src"}]
 
