[UPDATE] Set up the file which plot trajectories to be used through a poetry script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
 
 [project.scripts]
 test-tle = "inorbit.test_tle:main"
+plot-trajectories = "inorbit.plot_trajectories:main"
 
 [tool.poetry]
 packages = [{include = "inorbit", from = "src"}]
